feat: Enhance SEO and implement lazy loading
This commit introduces several improvements to the Synapse application:

1.  **SEO Optimizations:** Added Open Graph meta tags, a favicon, and an Apple Touch Icon to `index.html` for better search engine visibility and social media sharing.
2.  **Lazy Loading:** Implemented lazy loading for various component modules in `App.tsx` to improve initial page load performance. This includes components for drug search, interaction checking, pharmacotherapy guides, pregnancy checks, supplement searches, toxicology, and saved items.
3.  **Type Definitions:** Expanded and refined type definitions in `types.ts` to include interfaces for `MedicalEquipmentInfo`, `InfantFormulaInfo`, `SpecialMedicationInfo`, and their corresponding saved item types.
4.  **Component Refactoring:** Made minor adjustments to components like `SingleDrugSearch.tsx` and `InteractionChecker.tsx` for better structure and to integrate lazy loading.
5.  **Icon Integration:** Added a variety of new icons in `App.tsx` to support the expanded functionality of the application.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>سیناپس | دستیار هوشمند دارویی</title>
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#ffffff" />
+    
+    <!-- SEO & Social Sharing Optimizations -->
+    <meta property="og:title" content="سیناپس | دستیار هوشمند دارویی" />
+    <meta property="og:description" content="دستیار هوشمند دارویی شما برای اطلاعات جامع داروها، بررسی تداخلات، راهنمای فارماکوتراپی و موارد دیگر با قدرت هوش مصنوعی Gemini." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/vite.svg" />
+    <link rel="apple-touch-icon" href="/vite.svg" />
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
